Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjObjectField.quorum
class Main
    Object v
    v:SetValue()
    action Main
        Test(v)
    end

    action Test(Number var)
    end
end
